# snmp_agent_eth01

./: .gitignore  CMakeLists.txt  IDEAL_SYSTEM_PROMPT.txt  OID_MAP.md  README.md  antigravity_ide_handler.py  chat_log.txt  handler_log.txt  hardware_analysis.md  kt853b.md  kt853b_connect.md  project_analysis.md  project_overview.md  register_antigravity_ide.py  sdkconfig  sensors_schematic.md
.doc/: 2026-05-15_chat_log.md  walkthrough.md
Fritzing/: snmp_agent_eth01.fzz  snmp_agent_eth01_recovered.fzz  wt32-eth01.fzpz
components/snmp_lwip/: CMakeLists.txt
hardware/snmp_eth01_adapter/: generate_pcb.py  snmp_eth01_adapter.kicad_pcb  snmp_eth01_adapter.kicad_pro
main/: CMakeLists.txt  ethernet_app.c  ethernet_app.h  led_app.c  main.c  sensors_app.c  sensors_app.h
snmp_agent_eth01/: README1.md
